# controlxlinux

./: .directory  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql-analysis.yml  compile-test.yml
include/: controlxlinux.hpp
src/: controlxlinux.cpp
